syntax = "proto3";

package server;

import "Work.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "FindWorkResponseProto";

message FindWorkResponse {
    work.Work work = 1;
}
