syntax = "proto3";

package server;

import "PerformanceReport.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetTestPerformanceResponseProto";

message GetTestPerformanceResponse {
    reports.PerformanceReport performanceReport = 1;
}
