syntax = "proto3";

package server;

import "WorkUpdates.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "DelineateWorkResponseProto";

message DelineateWorkResponse {
    work.WorkUpdates workUpdates = 1;
}
