syntax = "proto3";

package server;

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetWorkDevicesRequestProto";

message GetWorkDevicesRequest {
    string workKey = 1;
}
