syntax = "proto3";

package server;

import "DeviceProperties.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetWorkDevicesResponseProto";

message GetWorkDevicesResponse {
    repeated device.DeviceProperties devices = 1;
}
